@@ -15,6 +15,46 @@ def simple_app(environ, start_response):
     return ['The current value is: %d' % session['value']]
 
 def test_increment():
+    options = {'session.validate_key':'hoobermas', 'session.type':'cookie'}
+    app = TestApp(SessionMiddleware(simple_app, **options))
+    res = app.get('/')
+    assert 'current value is: 1' in res
+    res = app.get('/')
+    assert 'current value is: 2' in res
+    res = app.get('/')
+    assert 'current value is: 3' in res
+
+def test_different_sessions():
+    options = {'session.validate_key':'hoobermas', 'session.type':'cookie'}
+    app = TestApp(SessionMiddleware(simple_app, **options))
+    app2 = TestApp(SessionMiddleware(simple_app, **options))
+    res = app.get('/')
+    assert 'current value is: 1' in res
+    res = app2.get('/')
+    assert 'current value is: 1' in res
+    res = app2.get('/')
+    res = app2.get('/')
+    res = app2.get('/')
+    res2 = app.get('/')
+    assert 'current value is: 2' in res2
+    assert 'current value is: 4' in res
+
+def test_nosave():
+    options = {'session.validate_key':'hoobermas', 'session.type':'cookie'}
+    app = TestApp(SessionMiddleware(simple_app, **options))
+    res = app.get('/nosave')
+    assert 'current value is: 1' in res
+    assert [] == res.all_headers('Set-Cookie')
+    res = app.get('/nosave')
+    assert 'current value is: 1' in res
+    
+    res = app.get('/')
+    assert 'current value is: 1' in res
+    assert len(res.all_headers('Set-Cookie')) > 0
+    res = app.get('/')
+    assert 'current value is: 2' in res
+
+def test_increment_with_encryption():
     options = {'session.encrypt_key':'666a19cf7f61c64c', 'session.validate_key':'hoobermas',
                'session.type':'cookie'}
     app = TestApp(SessionMiddleware(simple_app, **options))
@@ -25,7 +65,7 @@ def test_increment():
     res = app.get('/')
     assert 'current value is: 3' in res
 
-def test_different_sessions():
+def test_different_sessions_with_encryption():
     options = {'session.encrypt_key':'666a19cf7f61c64c', 'session.validate_key':'hoobermas',
                'session.type':'cookie'}
     app = TestApp(SessionMiddleware(simple_app, **options))
@@ -41,7 +81,7 @@ def test_different_sessions():
     assert 'current value is: 2' in res2
     assert 'current value is: 4' in res
 
-def test_nosave():
+def test_nosave_with_encryption():
     options = {'session.encrypt_key':'666a19cf7f61c64c', 'session.validate_key':'hoobermas',
                'session.type':'cookie'}
     app = TestApp(SessionMiddleware(simple_app, **options))
